# DAOVotingSystem

./: README.md
contract/: Scarb.toml
contract/src/: lib.cairo
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
frontend/components/: CreateProposal.tsx  ProposalList.tsx  Results.tsx  StatusMessage.tsx  Vote.tsx  dao-geometric-background.tsx  geometric-background.tsx
zkVM/host/: Cargo.toml
zkVM/host/src/: main.rs
zkVM/methods/guest/: Cargo.toml
zkVM/methods/guest/src/: main.rs
zkVM/src/: main.rs
